@@ -27,7 +27,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-* 
+* [mjr] Fix fatal error when exporting encrypted notes via ActiveSync.
+* [mjr] Fix saving notepad after saving failed due to mismatched passwords (Bug #12855).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1081,7 +1082,8 @@
    <date>2013-10-29</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-* 
+* [mjr] Fix fatal error when exporting encrypted notes via ActiveSync.
+* [mjr] Fix saving notepad after saving failed due to mismatched passwords (Bug #12855).
    </notes>
   </release>
  </changelog>
