@@ -2,6 +2,9 @@
 v4.1.3-git
 ----------
 
+[mjr] Fix fatal error when exporting encrypted notes via ActiveSync.
+[mjr] Fix saving notepad after saving failed due to mismatched passwords (Bug
+      #12855).
 
 
 ------
